# PPoGA

./: .env.example  .gitignore  README.md  README_v2.md  azure_ppoga_results.json  dev.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_albums_results.json
.github/: copilot-instructions.md
.github/workflows/: test.yml
legacy/: advanced_ppoga_test.py  langgraph_ppoga.py  langgraph_ppoga_results.json  main_ppoga_on_pog_experimental.py  pyproject_new.toml  pyproject_old.toml  quick_test.py  robust_azure_ppoga_results.json  simple_ppoga_test.py  simple_test.py  test_azure_api.py  test_azure_ppoga_results.json  test_ppoga.sh
legacy/pog_base_duplicate/: azure_llm.py  freebase_func.py  pog_prompts.py
legacy/ppoga_core_experimental/: azure_llm.py  enhanced_memory.py  (+2 more)
results/: PPoGA_v2_gpt-3.5-turbo_20251010_150012.jsonl  PPoGA_v2_gpt-3.5-turbo_20251010_150137.jsonl  ppoga_result_1760184014.json  ppoga_v2_result_1759780755.json  ppoga_v2_result_1759781003.json  ppoga_v2_result_1759900726.json  ppoga_v2_result_1760018811.json  ppoga_v2_result_1760019760.json  ppoga_v2_result_1760020048.json  ppoga_v2_result_1760020409.json  ppoga_v2_result_1760021005.json  ppoga_v2_result_1760021436.json  ppoga_v2_result_1760036439.json  ppoga_v2_result_1760036684.json  ppoga_v2_result_1760037079.json  ppoga_v2_result_1760038050.json  ppoga_v2_result_1760038290.json  ppoga_v2_result_1760041324.json  ppoga_v2_result_1760042335.json  ppoga_v2_result_1760042372.json  ppoga_v2_result_1760043513.json  ppoga_v2_result_1760043513_pog_format.jsonl
tests/: conftest.py
(+46 files in other folders)
